# omen-fan-controller-rust

./: Cargo.toml  README.md  flake.nix  result
src/: main.rs
src/omen-performance-control/: main.rs
src/omen-rust/: main.rs
