[package]
name = "omen-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
bisection = "*"
nix = {version = "*", features = ["user", "kmod"]}
lzma-rs = "*"
signal-hook = "*"
serde = { version = "*", features = ["derive"]}

[profile.release] 
lto = true 
codegen-units = 1
panic = "unwind"
